2023 update to the site

--- a/index.html
+++ b/index.html
@@ -10,31 +10,48 @@
     </head>
     <body id="theme">
         <div id="navbar">
-            <span id="home-button" class="navbar-button">QrtZ</span>
+
+            <div class="navbutton">
+            <span id="home-button" class="navbar-button">Aikoyori</span>
             <span id="notepad-button" class="navbar-button">Notepad</span>
-            <span id="discord-button" class="navbar-button">Discord</span>
-            <span id="theme-button" class="navbar-button">🌙</span></div>
+            <span id="new-site-button" class="navbar-button">Visit the New Site</span>
+            </div>
+            <div class="themebuttoncontainer">
+                <span id="theme-button" class="navbar-button">🌙</span>
+            </div>
+        </div>
         <div id="web-content">
                 <div id="content-container">
-                <span class="content">//=====\\        ||     ======//</span>
-                <span class="content">||     ||      ==||==        //</span>
-                <span class="content">||     || || /== ||        //</span>
-                <span class="content">||     || ||//   ||      //</span>
-                <span class="content">\\=====// ||     \\=== //======</span>
-                <span class="content">   _//</span>
-                <span class="content">      (Queue-are-tee-zee)</span>
-                <span class="content"></span>
+                <span class="content">   </span>
+                <span class="content">    //||      ||</span>
+                <span class="content">   // ||  []  ||                                     []</span>
+                <span class="content">  //==||      || // //===\\ \\    // //===\\ ||==\\</span>
+                <span class="content"> //   ||  ||  ||&lt;&lt;  ||   ||  \\  //  ||   || ||      ||</span>
+                <span class="content">//    ||  ||  || \\ \\===//   \\//   \\===// ||      ||</span>
+                <span class="content">                               //</span>
+                <span class="content">      (Eye-ko-yoh-ri)         //</span>
+                <span class="content">                             //</span>
                 <span class="content"></span>
                 <span class="content"></span>
                 <span class="content">Thanks for visiting my personal website. </span>
-                <span class="content">Please click <highlight id="notepad-link">this link</highlight></span>
-                <span class="content">or press any key to go to notepad</span>
+                <span class="content">This site barely has any information and kept here for historical purposes </span>
+                <span class="content">in terms of my web design over the years. I have made a 2023 edit to the 2019 code</span>
+                <span class="content">and just so you know I only made the navbar less janky and increased</span>
+                <span class="content">the font size of the page for higher resolution monitors. The design </span>
+                <span class="content">should stay the same. This page also is not very accesible from the fact that</span>
+                <span class="content">the buttons are not, well, actual button class. I also wrote this text</span>
+                <span class="content">so people who visit this historical mess wouldn't get confused why</span>
+                <span class="content">it's self-aware. Have a nice day and thanks for looking back to my</span>
+                <span class="content">history even if you are just passing by. Reminder that this is just a static</span>
+                <span class="content">text that might never ever change again :P - Aikoyori 2023/11/19</span>
+                <span class="content">PS: I also made notepad less janky</span>
+                <span class="content"></span>
+                <span class="content">Please click <highlight id="notepad-link">this link</highlight> to go to the notepad section.</span>
+                <span class="content">Or click <highlight id="new-site-link">this link</highlight> to go to my new website.</span>
 <span class="content">Thank you for coming to my TED talk :) . . . <span class="blinking">_</span></span>
 <div>
         </div>
     </body>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="/jquery-ui.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
     <script src="/scripts.js"></script>
 </html>
