--- a/notepad/index.html
+++ b/notepad/index.html
@@ -13,11 +13,14 @@
     </head>
     <body id="theme">
         <div id="navbar">
-            <span id="home-button" class="navbar-button">QrtZ</span>
+
+            <div class="navbutton">
+            <span id="home-button" class="navbar-button">Aikoyori</span>
             <span id="notepad-button" class="navbar-button">Notepad</span>
-            <span id="discord-button" class="navbar-button">Discord</span>
-            <span id="theme-button" class="navbar-button">🌙</span></div>
-            </div></div>
+            <span id="new-site-button" class="navbar-button">Visit the New Site</span>
+            </div>
+            <span id="theme-button" class="navbar-button-special">🌙</span>
+        </div>
         <!--<div>This is dummy text.</div>-->
         <div id="web-content">
             <textarea id="textbox"></textarea>
